# UE-N-Queens-problem

./: README.md  pyproject.toml
src/: __init__.py  banchmark.py  solver.py
src/plots/: DFSExhaustiveSolver.md  GeneticAlgorithmSolver.md  GreedyHillClimbingSolver.md  GreedyHillClimbingSolver_no_cache.md  NovelMutationGeneticSolver.md  OptimizedGeneticSolver.md  OptimizedHillClimbingSolver.md  SimulatedAnnealingSolver.md  aggregate_results.md
src/solvers/: __init__.py  dfs_exhaustive_solver.py  genetic_algorithm_solver.py  greedy_hill_climbing_solver.py  novel_mutation_genetic_solver.py  optimized_genetic_solver.py  simulated_annealing_solver.py
tools/: benchmark_engine.py  drawing engine.py  testing_engine.py
