[project]
name = "ue-n-queens-problem"
version = "0.1.0"
description = "Solving the N-Queens Problem with Exhaustive Search and Genetic Algorithms"
authors = [
    { name = "DiodDan", email = "danilaprig@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = ">=3.13"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
